--- a/app/components/sidebar/sidebar.tpl.html
+++ b/app/components/sidebar/sidebar.tpl.html
@@ -23,21 +23,30 @@
         <a ui-sref="app.dashboard" class="detailed">
           <span class="title">Dashboard</span>
         </a>
-        <span class="icon-thumbnail" ng-class="{'bg-complete': vm.$state.current.name == 'app.dashboard'}"><i class="fa fa-tachometer" aria-hidden="true"></i></span>
+        <span class="icon-thumbnail"
+              ng-class="{'bg-complete': vm.$state.current.name == 'app.dashboard'}">
+              <i class="fa fa-tachometer" aria-hidden="true"></i>
+        </span>
       </li>
 
       <li class="open" ui-sref-active="active">
         <a ui-sref="app.hack" class="detailed">
           <span class="title">Pool</span>
         </a>
-        <span class="icon-thumbnail" ng-class="{'bg-complete': vm.$state.current.name == 'app.hack'}"><i class="fa fa-diamond" aria-hidden="true"></i></span>
+        <span class="icon-thumbnail"
+              ng-class="{'bg-complete': vm.$state.current.name == 'app.hack'}">
+              <i class="fa fa-diamond" aria-hidden="true"></i>
+        </span>
       </li>
 
       <li class="open" ui-sref-active="active">
         <a ui-sref="app.content" class="detailed">
           <span class="title">Contents</span>
         </a>
-        <span class="icon-thumbnail" ng-class="{'bg-complete': vm.$state.current.name == 'app.contents'}"><i class="fa fa-database" aria-hidden="true"></i></span>
+        <span class="icon-thumbnail"
+              ng-class="{'bg-complete': vm.$state.current.name == 'app.contents'}">
+              <i class="fa fa-database" aria-hidden="true"></i>
+        </span>
       </li>
     </ul>
     <div class="clearfix"></div>
