--- a/app/views/blocks/footer.html
+++ b/app/views/blocks/footer.html
@@ -1,4 +1,5 @@
-<div class="container-fluid container-fixed-lg footer" ng-class="{'pull-bottom': is('app.maps.vector') }">
+<div class="container-fluid container-fixed-lg footer"
+     ng-class="{'pull-bottom': is('app.maps.vector') }">
     <div class="copyright sm-text-center">
         <p class="small no-margin pull-left sm-pull-reset">
             <span class="font-montserrat">Alan Mortoni</span>.
