--- a/app/views/blocks/header.html
+++ b/app/views/blocks/header.html
@@ -3,7 +3,9 @@
     <div class="container-fluid relative">
       <div class="pull-left full-height visible-sm visible-xs">
         <div class="header-inner">
-          <a href="#" class="btn-link toggle-sidebar visible-sm-inline-block visible-xs-inline-block padding-5" data-toggle="sidebar">
+          <a href="#"
+             class="btn-link toggle-sidebar visible-sm-inline-block visible-xs-inline-block padding-5"
+             data-toggle="sidebar">
             <i class="fa fa-bars" aria-hidden="true"></i>
           </a>
         </div>
@@ -11,7 +13,10 @@
       <div class="pull-center hidden-md hidden-lg">
         <div class="header-inner">
           <div class="brand inline">
-            <img alt="Facehack Logo" src="../images/facehack2.png" height="60" width="60">
+            <img alt="Facehack Logo"
+                 src="../images/facehack2.png"
+                 height="60"
+                 width="60">
           </div>
         </div>
       </div>
@@ -19,7 +24,10 @@
     <div class=" pull-left sm-table hidden-xs hidden-sm">
         <div class="header-inner">
             <div class="brand inline">
-              <img alt="Facehack Logo" src="../images/facehack2.png" height="70" width="70">
+              <img alt="Facehack Logo"
+                   src="../images/facehack2.png"
+                   height="70"
+                   width="70">
             </div>
         </div>
     </div>
