--- a/app/components/profile/profile.tpl.html
+++ b/app/components/profile/profile.tpl.html
@@ -9,7 +9,11 @@
         tabindex="0"
         aria-label="User Menu">
     <span class="thumbnail-wrapper d32 circular inline m-t-5">
-      <img ng-src="{{vm.user.photoURL}}" alt="User photo" ui-jq="unveil" width="32" height="32">
+      <img ng-src="{{vm.user.photoURL}}"
+           alt="User photo"
+           ui-jq="unveil"
+           width="32"
+           height="32">
     </span>
   </button>
 
@@ -29,7 +33,9 @@
       <li role="menuitem" tabindex="-1" class="bg-master-lighter">
           <a href="" class="clearfix" ng-click="vm.logout()">
               <span class="pull-left">Logout</span>
-              <span class="pull-right"><i class="fa fa-sign-out" aria-hidden="true"></i></span>
+              <span class="pull-right">
+                <i class="fa fa-sign-out" aria-hidden="true"></i>
+              </span>
           </a>
       </li>
   </ul>
