--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -1,85 +1,75 @@
 @import 'http://weloveiconfonts.com/api/?family=entypo';
 
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-
-  &:before {
-    margin: 0;
-    padding: 0;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-	}
-
-  &:after {
-    margin: 0;
-    padding: 0;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-	}
 }
+
 #lamp {
-  position: relative;
-  width: 100vw;
+  background: $bg-ebony-clay;
   height: 100vh;
   overflow: hidden;
-  background: $bg-ebony-clay;
+  position: relative;
+  width: 100vw;
 }
 
-input[name="switch"] {
-  position: absolute;
-  bottom: 3rem;
-  width: 4rem;
-  height: 4rem;
-  opacity: 0;
-  z-index: 9;
-  cursor: pointer;
-  + {
-    label {
-      position: absolute;
-      bottom: 3rem;
-      width: 4rem;
-      height: 4rem;
-      right: 3rem;
-      text-align: center;
-		}
-	}
-}
-input[value="on"] {
-  right: 3rem;
+input {
+  &[name='switch'] {
+    bottom: 3rem;
+    cursor: pointer;
+    height: 4rem;
+    opacity: 0;
+    position: absolute;
+    width: 4rem;
+    z-index: 9;
 
-  &:checked {
-    right: -4rem;
     + {
-    input[value="off"] {
+      label {
+        bottom: 3rem;
+        height: 4rem;
+        position: absolute;
         right: 3rem;
-			}
-		}
-    ~ {
-      .lamp {
+        text-align: center;
+        width: 4rem;
+  		}
+    }
+  }
 
-        &:before {
-          background: $bg-white;
-          box-shadow: 0px 2px 10px $bg-white-matte-8, 0 5px 50px $bg-white-matte-8, 0 8px 80px $bg-white-matte-6, 0 8px 120px $bg-white-matte-6;
-				}
-			}
-		}
-	}
-}
-input[value="off"] {
-  right: -4rem;
+  &[value='on'] {
+    right: 3rem;
+
+    &:checked {
+      right: -4rem;
+      + {
+
+      input[value="off"] {
+          right: 3rem;
+  			}
+  		}
+      ~ {
+
+        .lamp {
+
+          &:before {
+            background: $bg-white;
+            box-shadow: 0px 2px 10px $bg-white-matte-8, 0 5px 50px $bg-white-matte-8, 0 8px 80px $bg-white-matte-6, 0 8px 120px $bg-white-matte-6;
+  				}
+  			}
+  		}
+  	}
+  }
+
+  &[value='off'] {
+    right: -4rem;
+  }
 }
 
-[class*="entypo-"] {
+[class*='entypo-'] {
   &:before {
+    color: $bg-white-matte-4;
     line-height: 4rem;
     font-size: 2.5rem;
-    color: $bg-white-matte-4;
     font-family: 'entypo', sans-serif;
 	}
 }
