--- a/app/views/blocks/quick_view.html
+++ b/app/views/blocks/quick_view.html
@@ -1,10 +1,15 @@
-<div id="quickview" class="quickview-wrapper" pg-quickview ng-controller="DashboardCtrl as vm">
+<div id="quickview"
+     class="quickview-wrapper"
+     pg-quickview
+     ng-controller="DashboardCtrl as vm">
     <ul class="nav nav-tabs">
         <li class="active">
             <a href="#quickview-chat" data-toggle="tab" pg-tab>Configuration</a>
         </li>
     </ul>
-    <a class="btn-link quickview-toggle" data-toggle-element="#quickview" data-toggle="quickview">
+    <a class="btn-link quickview-toggle"
+       data-toggle-element="#quickview"
+       data-toggle="quickview">
       <i class="fa fa-times" aria-hidden="true"></i>
     </a>
     <div class="tab-content">
@@ -33,8 +38,10 @@
 
               <span>Once you select a page would you</span><br>
               <span class="m-r-10">like to listen it automactly</span>
-              <md-checkbox ng-model="vm.automactly" ng-change="vm.auto()" aria-label="Once You sele a Page Would you like to listen it Automactly" class="md-primary">
-
+              <md-checkbox ng-model="vm.automactly"
+                           ng-change="vm.auto()"
+                           aria-label="Once You sele a Page Would you like to listen it Automactly"
+                           class="md-primary">
               </md-checkbox>
             </div>
           </div>
