feat: get info of pages

--- a/app/components/card/card.scss
+++ b/app/components/card/card.scss
@@ -11,4 +11,13 @@ fck-cards{
   	overflow: hidden;
   	font-size: 16px;
   }
+
+  .modal-full {
+    margin: 0;
+    width: 100%;
+  }
+
+  .modal.fade.fill-in .modal-content {
+    vertical-align: top;
+  }
 }
