--- a/app/components/card/card.tpl.html
+++ b/app/components/card/card.tpl.html
@@ -51,10 +51,34 @@
       </md-card-title-media>
     </md-card-title>
     <md-card-actions layout="row" layout-align="end center">
-      <md-button>Spy</md-button>
+      <md-button ng-click="vm.spy(page)">Spy</md-button>
       <md-button ng-click="vm.hack(page)">Hack</md-button>
       <md-button>More</md-button>
     </md-card-actions>
   </md-card>
 
+</div>
+
+<div class="modal fade fill-in"
+     id="modalInfo"
+     tabindex="-1"
+     role="dialog"
+     aria-hidden="true">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+        <i class="pg-close"></i>
+    </button>
+    <div class="modal-dialog modal-full">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="text-left p-b-5"><span class="semi-bold">News letter</span> signup</h5>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <span class="text-left">teste</span>
+                </div>
+            </div>
+            <div class="modal-footer">
+            </div>
+        </div>
+    </div>
 </div>
