--- a/app/styles/pages.scss
+++ b/app/styles/pages.scss
@@ -1,20 +1,20 @@
-Skip to content
-This repository
-Search
-Pull requests
-Issues
-Gist
- @mortoni
- Unwatch 1
-  Star 0
-  Fork 0 mortoni/facehack
- Code  Issues 0  Pull requests 0  Projects 0  Wiki  Pulse  Graphs  Settings
-Branch: master Find file Copy pathfacehack/app/styles/pages.scss
-d9a9321  10 days ago
-@mortoni mortoni fix: clean up, gulp, js clean, css clean
-1 contributor
-RawBlameHistory
-13737 lines (13731 sloc)  296 KB
+// Skip to content
+// This repository
+// Search
+// Pull requests
+// Issues
+// Gist
+//  @mortoni
+//  Unwatch 1
+//   Star 0
+//   Fork 0 mortoni/facehack
+//  Code  Issues 0  Pull requests 0  Projects 0  Wiki  Pulse  Graphs  Settings
+// Branch: master Find file Copy pathfacehack/app/styles/pages.scss
+// d9a9321  10 days ago
+// @mortoni mortoni fix: clean up, gulp, js clean, css clean
+// 1 contributor
+// RawBlameHistory
+// 13737 lines (13731 sloc)  296 KB
 /*------------------------------------------------------------------
 Pages v2.1.5
 Theme : Default
@@ -13746,5 +13746,5 @@ Main components
     background-size: 114px 29px;
   }
 }
-Contact GitHub API Training Shop Blog About
-© 2016 GitHub, Inc. Terms Privacy Security Status Help
+// Contact GitHub API Training Shop Blog About
+// © 2016 GitHub, Inc. Terms Privacy Security Status Help
