--- a/app/components/sidebar/sidebar.tpl.html
+++ b/app/components/sidebar/sidebar.tpl.html
@@ -11,7 +11,7 @@
               class="btn btn-link visible-lg-inline"
               data-toggle-pin="sidebar"
               tabindex="-1"
-              aria-label="Click here to fix sidebac on screen">
+              aria-label="Click here to fix sidebar on screen">
               <i class="fa fs-12"></i>
       </button>
     </div>
