--- a/app/styles/base.scss
+++ b/app/styles/base.scss
@@ -10,3 +10,4 @@
 @import "../components/card/card";
 @import "../components/contents-pool/contents-pool";
 @import "../components/sidebar/sidebar";
+@import "../components/pages-pool/pages-pool";
