--- a/app/views/blocks/sidebar.html
+++ b/app/views/blocks/sidebar.html
@@ -9,17 +9,11 @@
   <div class="sidebar-header">
     <img alt="Udacity Logo" src="../images/logo.svg" width="78" height="22">
     <div class="pull-right m-r-35">
-      <!-- <button type="button"
-              class="btn btn-xs sidebar-slide-toggle btn-link m-l-20"
-              data-pages-toggle="#appMenu"
-              tabindex="-1">
-              <i class="fa fa-angle-down fs-16"></i>
-      </button> -->
       <button type="button"
               class="btn btn-link visible-lg-inline"
               data-toggle-pin="sidebar"
               tabindex="-1"
-              aria-label="Click here to fix sidebac on screen">
+              aria-label="Click here to fix sidebar on screen">
               <i class="fa fs-12"></i>
       </button>
     </div>
