--- a/app/components/pages-pool/pages-pool.tpl.html
+++ b/app/components/pages-pool/pages-pool.tpl.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 -col-sm-12 col-md-4">
+<div class="col-xs-12 -col-sm-12 col-md-4 contents">
   <md-toolbar class="content-table-header md-default bk-trans">
     <div class="md-toolbar-tools">
       <span class="m-r-20">Pages Pool</span>
@@ -7,7 +7,8 @@
               data-toggle="tooltip"
               data-original-title="Help?"
               ui-jq="tooltip"
-              ng-click="vm.help()">
+              ng-click="vm.help()"
+              aria-label="click for help">
         <i class="fa fa-question" aria-hidden="true"></i>
       </button>
     </div>
