--- a/app/styles/pages.scss
+++ b/app/styles/pages.scss
@@ -90,7 +90,7 @@ body.mobile .page-sidebar .sidebar-menu .menu-items li:hover a {
   color: #788195;
 }
 body.mobile .page-sidebar .sidebar-menu .menu-items li:hover .icon-thumbnail {
-  color: #788195 !important;
+  color: white !important;
 }
 body.mobile .page-sidebar .sidebar-menu .menu-items li.active > a,
 body.mobile .page-sidebar .sidebar-menu .menu-items li.open > a {
