--- a/app/components/sidebar/sidebar.tpl.html
+++ b/app/components/sidebar/sidebar.tpl.html
@@ -41,7 +41,7 @@
 
       <li class="open" ui-sref-active="active">
         <a ui-sref="app.content" class="detailed">
-          <span class="title">Contents</span>
+          <span class="title">Database</span>
         </a>
         <span class="icon-thumbnail"
               ng-class="{'bg-complete': vm.$state.current.name == 'app.contents'}">
