--- a/app/views/app/app.html
+++ b/app/views/app/app.html
@@ -1,5 +1,5 @@
 <div ng-include src=" 'views/blocks/sidebar.html' "></div>
-
+<!-- <fck-sidebar></fck-sidebar> -->
 <div class="page-container">
     <div ng-include=" 'views/blocks/header.html' "></div>
     <div class="page-content-wrapper">
