--- a/app/components/pages-pool/pages-pool.tpl.html
+++ b/app/components/pages-pool/pages-pool.tpl.html
@@ -2,7 +2,7 @@
   <md-toolbar class="content-table-header md-default bk-trans">
     <div class="md-toolbar-tools">
       <span class="m-r-20">Pages Pool</span>
-      <button type="button"
+      <!-- <button type="button"
               class="btn btn-primary tip btn-xs"
               data-toggle="tooltip"
               data-original-title="Help?"
@@ -10,7 +10,7 @@
               ng-click="vm.help()"
               aria-label="click for help">
         <i class="fa fa-question" aria-hidden="true"></i>
-      </button>
+      </button> -->
     </div>
   </md-toolbar>
 
