--- a/app/components/contents-pool/contents-pool.scss
+++ b/app/components/contents-pool/contents-pool.scss
@@ -1,22 +1,30 @@
-.content-body {
-  margin-top: 15px;
-}
 
-table {
-  .md-table {
-  	&:not(.md-row-select) {
-  		td {
-        .md-cell {
-    			&:nth-child(n+2) {
-    				&:nth-last-child(n+2) {
-    					padding: 0 5px 0 0;
-    				}
-    			}
-    		}
-      }
-  	}
-  	td.md-cell {
-  		padding: 5px 10px !important;
-  	}
+fck-contents-pool {
+  .content-body {
+    margin-top: 15px;
+  }
+
+  table {
+    .md-table {
+    	&:not(.md-row-select) {
+    		td {
+          .md-cell {
+      			&:nth-child(n+2) {
+      				&:nth-last-child(n+2) {
+      					padding: 0 5px 0 0;
+      				}
+      			}
+      		}
+        }
+    	}
+    	td.md-cell {
+    		padding: 5px 10px !important;
+
+        .td-p-r-0 {
+          padding-right: 10px !important;
+          width: 1px;
+        }
+    	}
+    }
   }
 }
