--- a/app/styles/base.scss
+++ b/app/styles/base.scss
@@ -11,3 +11,4 @@
 @import "../components/contents-pool/contents-pool";
 @import "../components/sidebar/sidebar";
 @import "../components/pages-pool/pages-pool";
+@import "../components/database/database";
